--- a/HousingPrices.ipynb
+++ b/HousingPrices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "a8c45658",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "854491f9",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "[5 rows x 82 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "5f9e0324",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "94dd815b",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
        "(2930, 82)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "cc052572",
    "metadata": {},
    "outputs": [
@@ -794,8 +794,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "631d69a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order</th>\n",
+       "      <th>PID</th>\n",
+       "      <th>MS SubClass</th>\n",
+       "      <th>Lot Frontage</th>\n",
+       "      <th>Lot Area</th>\n",
+       "      <th>Overall Qual</th>\n",
+       "      <th>Overall Cond</th>\n",
+       "      <th>Year Built</th>\n",
+       "      <th>Year Remod/Add</th>\n",
+       "      <th>Mas Vnr Area</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Wood Deck SF</th>\n",
+       "      <th>Open Porch SF</th>\n",
+       "      <th>Enclosed Porch</th>\n",
+       "      <th>3Ssn Porch</th>\n",
+       "      <th>Screen Porch</th>\n",
+       "      <th>Pool Area</th>\n",
+       "      <th>Misc Val</th>\n",
+       "      <th>Mo Sold</th>\n",
+       "      <th>Yr Sold</th>\n",
+       "      <th>SalePrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>526301100</td>\n",
+       "      <td>20</td>\n",
+       "      <td>141.0</td>\n",
+       "      <td>31770</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>210</td>\n",
+       "      <td>62</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>215000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>526350040</td>\n",
+       "      <td>20</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>11622</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>140</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>105000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>526351010</td>\n",
+       "      <td>20</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>14267</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1958</td>\n",
+       "      <td>1958</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>393</td>\n",
+       "      <td>36</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12500</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>172000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>526353030</td>\n",
+       "      <td>20</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>11160</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1968</td>\n",
+       "      <td>1968</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>244000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>527105010</td>\n",
+       "      <td>60</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>13830</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>212</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>189900</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Order        PID  MS SubClass  Lot Frontage  Lot Area  Overall Qual  \\\n",
+       "0      1  526301100           20         141.0     31770             6   \n",
+       "1      2  526350040           20          80.0     11622             5   \n",
+       "2      3  526351010           20          81.0     14267             6   \n",
+       "3      4  526353030           20          93.0     11160             7   \n",
+       "4      5  527105010           60          74.0     13830             5   \n",
+       "\n",
+       "   Overall Cond  Year Built  Year Remod/Add  Mas Vnr Area  ...  Wood Deck SF  \\\n",
+       "0             5        1960            1960         112.0  ...           210   \n",
+       "1             6        1961            1961           0.0  ...           140   \n",
+       "2             6        1958            1958         108.0  ...           393   \n",
+       "3             5        1968            1968           0.0  ...             0   \n",
+       "4             5        1997            1998           0.0  ...           212   \n",
+       "\n",
+       "   Open Porch SF  Enclosed Porch  3Ssn Porch  Screen Porch  Pool Area  \\\n",
+       "0             62               0           0             0          0   \n",
+       "1              0               0           0           120          0   \n",
+       "2             36               0           0             0          0   \n",
+       "3              0               0           0             0          0   \n",
+       "4             34               0           0             0          0   \n",
+       "\n",
+       "   Misc Val  Mo Sold  Yr Sold  SalePrice  \n",
+       "0         0        5     2010     215000  \n",
+       "1         0        6     2010     105000  \n",
+       "2     12500        6     2010     172000  \n",
+       "3         0        4     2010     244000  \n",
+       "4         0        3     2010     189900  \n",
+       "\n",
+       "[5 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#select all numeric features\n",
+    "df_num = df.select_dtypes(include = ['float64', 'int64'])\n",
+    "df_num.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2613bd18",
    "metadata": {},
    "outputs": [],
    "source": []
