--- a/health-insurance/HealthInsurancePredictions.ipynb
+++ b/health-insurance/HealthInsurancePredictions.ipynb
@@ -19,6 +19,7 @@
         "import seaborn as sns\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.ensemble import RandomForestRegressor\n",
         "from sklearn import metrics"
       ],
       "metadata": {
@@ -2650,18 +2651,16 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.ensemble import RandomForestRegressor\n",
-        "\n",
         "regressor = RandomForestRegressor(n_estimators=100, random_state=42)\n",
         "regressor.fit(X_train, Y_train)"
       ],
       "metadata": {
-        "id": "_9ixMnQsKIth",
-        "outputId": "305020c2-b007-438f-c1d3-880c2a49eb71",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
-        }
+        },
+        "id": "_9ixMnQsKIth",
+        "outputId": "305020c2-b007-438f-c1d3-880c2a49eb71"
       },
       "id": "_9ixMnQsKIth",
       "execution_count": 44,
@@ -3107,11 +3106,11 @@
         "print(\"Mean Absolute Error in the training data: \", mae)"
       ],
       "metadata": {
-        "id": "tODHSgJjKYRH",
-        "outputId": "99fe74da-3962-4612-c67c-01eeeac3b98b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tODHSgJjKYRH",
+        "outputId": "99fe74da-3962-4612-c67c-01eeeac3b98b"
       },
       "id": "tODHSgJjKYRH",
       "execution_count": 46,
@@ -3125,6 +3124,112 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Feature Importances"
+      ],
+      "metadata": {
+        "id": "ikFwgDxFM9IT"
+      },
+      "id": "ikFwgDxFM9IT"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "importances = pd.Series(regressor.feature_importances_, index=X.columns)\n",
+        "importances.sort_values(ascending=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 214
+        },
+        "id": "3EMhPHduKJIL",
+        "outputId": "d3beb963-9e3c-4a21-cbd6-05f510b6c6b5"
+      },
+      "id": "3EMhPHduKJIL",
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "smoker      0.627286\n",
+              "bmi         0.208106\n",
+              "age         0.124708\n",
+              "children    0.019034\n",
+              "region      0.014945\n",
+              "sex         0.005921\n",
+              "dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>smoker</th>\n",
+              "      <td>0.627286</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>bmi</th>\n",
+              "      <td>0.208106</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>age</th>\n",
+              "      <td>0.124708</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>children</th>\n",
+              "      <td>0.019034</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>region</th>\n",
+              "      <td>0.014945</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>sex</th>\n",
+              "      <td>0.005921</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Based on feature importance from the Random Forest model, smoking status, BMI, and age are the most influential factors in predicting insurance charges."
+      ],
+      "metadata": {
+        "id": "l7scmStMNbyr"
+      },
+      "id": "l7scmStMNbyr"
     },
     {
       "cell_type": "markdown",
@@ -3147,11 +3252,11 @@
         "print(\"Mean Absolute Error in the test data: \", mae)"
       ],
       "metadata": {
-        "id": "A_yaBrbyKJE5",
-        "outputId": "f5efe41b-f9ae-46c8-b570-ef44b4422e22",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "A_yaBrbyKJE5",
+        "outputId": "f5efe41b-f9ae-46c8-b570-ef44b4422e22"
       },
       "id": "A_yaBrbyKJE5",
       "execution_count": 47,
@@ -3175,16 +3280,6 @@
         "id": "XJPBCXZYLXZh"
       },
       "id": "XJPBCXZYLXZh"
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "3EMhPHduKJIL"
-      },
-      "id": "3EMhPHduKJIL",
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
