Amazon Sentiment Analysis update

--- a/amazon-sentiments/AmazonAlexaReviewsSentimentAnalysis.ipynb
+++ b/amazon-sentiments/AmazonAlexaReviewsSentimentAnalysis.ipynb
@@ -594,8 +594,8 @@
    ],
    "source": [
     "df['feedback'].value_counts().plot.bar(color = 'orange')\n",
-    "plt.title('Ratings Count Distribution')\n",
-    "plt.xlabel('Ratings')\n",
+    "plt.title('Feedback Count Distribution')\n",
+    "plt.xlabel('F')\n",
     "plt.ylabel('Count')\n",
     "plt.show()"
    ]
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 243,
    "id": "cf599d75",
    "metadata": {},
    "outputs": [
@@ -1473,7 +1473,7 @@
        "              num_parallel_tree=None, random_state=None, ...)"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 244,
    "id": "a940549c",
    "metadata": {},
    "outputs": [
@@ -1507,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 245,
    "id": "8583b656",
    "metadata": {},
    "outputs": [
@@ -1535,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 246,
    "id": "332f6f39",
    "metadata": {},
    "outputs": [],
