Progress - Recommendation System

--- a/movie-recommendations/MovieRecommendationsML.ipynb
+++ b/movie-recommendations/MovieRecommendationsML.ipynb
@@ -3087,11 +3087,11 @@
         "    df2[feature] = df2[feature].apply(data_cleaning)"
       ],
       "metadata": {
-        "id": "jSPdaTQl9dJh",
-        "outputId": "8f470157-d9f7-4b25-f7de-4fa9004c498c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jSPdaTQl9dJh",
+        "outputId": "8f470157-d9f7-4b25-f7de-4fa9004c498c"
       },
       "id": "jSPdaTQl9dJh",
       "execution_count": 56,
@@ -3131,12 +3131,12 @@
         "df2.head()"
       ],
       "metadata": {
-        "id": "OVPCVaf3-Oyt",
-        "outputId": "23da3d95-72ea-4d3b-ad49-ede7f83a1409",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 432
-        }
+        },
+        "id": "OVPCVaf3-Oyt",
+        "outputId": "23da3d95-72ea-4d3b-ad49-ede7f83a1409"
       },
       "id": "OVPCVaf3-Oyt",
       "execution_count": 61,
@@ -3513,11 +3513,11 @@
         "tfidx_matrix.shape #This will be (#movies,#words)"
       ],
       "metadata": {
-        "id": "aHbTXlhl_nhB",
-        "outputId": "f8ef78df-e9bc-4be5-9327-963bec4b0d4e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aHbTXlhl_nhB",
+        "outputId": "f8ef78df-e9bc-4be5-9327-963bec4b0d4e"
       },
       "id": "aHbTXlhl_nhB",
       "execution_count": 62,
@@ -3552,11 +3552,11 @@
         "similarity_scores.shape"
       ],
       "metadata": {
-        "id": "Hxb4dbVuAc0G",
-        "outputId": "41e6e468-6a9d-4b47-e1c4-f6fa01ad4e8a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Hxb4dbVuAc0G",
+        "outputId": "41e6e468-6a9d-4b47-e1c4-f6fa01ad4e8a"
       },
       "id": "Hxb4dbVuAc0G",
       "execution_count": 63,
@@ -3570,6 +3570,139 @@
           },
           "metadata": {},
           "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df2 = df2.reset_index()\n",
+        "#Creating a lookup structure that takes title and gives the idx in dataframe\n",
+        "indices = pd.Series(df2.index, index=df2['title'])\n",
+        "\n",
+        "def get_recommendations(title):\n",
+        "    # Get the index of the movie that matches the title\n",
+        "    idx = indices[title]\n",
+        "    # Get the pairwsie similarity scores of all movies with that movie\n",
+        "    sim_scores = list(enumerate(similarity_scores[idx]))\n",
+        "    # Sort the movies based on the similarity scores\n",
+        "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
+        "    # Get the scores of the 10 most similar movies\n",
+        "    sim_scores = sim_scores[1:11]\n",
+        "    # Get the movie indices\n",
+        "    movie_indices = [i[0] for i in sim_scores]\n",
+        "    # Return the top 10 most similar movies\n",
+        "    return df2['title'].iloc[movie_indices]"
+      ],
+      "metadata": {
+        "id": "vD8oxLRGDh0a"
+      },
+      "id": "vD8oxLRGDh0a",
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_recommendations('The Dark Knight Rises')"
+      ],
+      "metadata": {
+        "id": "kYilmv0dEAWT",
+        "outputId": "d48ccea9-29cd-4130-f2f3-68104ff67720",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 301
+        }
+      },
+      "id": "kYilmv0dEAWT",
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "65                              The Dark Knight\n",
+              "119                               Batman Begins\n",
+              "1196                               The Prestige\n",
+              "2917                                The Fighter\n",
+              "3854    Batman: The Dark Knight Returns, Part 2\n",
+              "2793                       The Killer Inside Me\n",
+              "299                              Batman Forever\n",
+              "813                                    Superman\n",
+              "870                                 Superman II\n",
+              "1033                                   Insomnia\n",
+              "Name: title, dtype: object"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>title</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>65</th>\n",
+              "      <td>The Dark Knight</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>119</th>\n",
+              "      <td>Batman Begins</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1196</th>\n",
+              "      <td>The Prestige</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2917</th>\n",
+              "      <td>The Fighter</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3854</th>\n",
+              "      <td>Batman: The Dark Knight Returns, Part 2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2793</th>\n",
+              "      <td>The Killer Inside Me</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>299</th>\n",
+              "      <td>Batman Forever</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>813</th>\n",
+              "      <td>Superman</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>870</th>\n",
+              "      <td>Superman II</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1033</th>\n",
+              "      <td>Insomnia</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> object</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
         }
       ]
     }
