Recommendation System - added fuzzy matching

--- a/movie-recommendations/MovieRecommendationsML.ipynb
+++ b/movie-recommendations/MovieRecommendationsML.ipynb
@@ -3578,9 +3578,23 @@
       "source": [
         "df2 = df2.reset_index()\n",
         "#Creating a lookup structure that takes title and gives the idx in dataframe\n",
-        "indices = pd.Series(df2.index, index=df2['title'])\n",
-        "\n",
+        "indices = pd.Series(df2.index, index=df2['title'])"
+      ],
+      "metadata": {
+        "id": "NG6LhPDwHrQL"
+      },
+      "id": "NG6LhPDwHrQL",
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def get_recommendations(title):\n",
+        "    movie_titles_all = df2['title'].tolist()\n",
+        "    #fuzzy matching to match the typed title to the closest match\n",
+        "    find_close_match = difflib.get_close_matches(title, movie_titles_all)\n",
+        "    title = find_close_match[0]\n",
         "    # Get the index of the movie that matches the title\n",
         "    idx = indices[title]\n",
         "    # Get the pairwsie similarity scores of all movies with that movie\n",
@@ -3592,117 +3606,101 @@
         "    # Get the movie indices\n",
         "    movie_indices = [i[0] for i in sim_scores]\n",
         "    # Return the top 10 most similar movies\n",
-        "    return df2['title'].iloc[movie_indices]"
+        "    return df2['title'].iloc[movie_indices].tolist()"
       ],
       "metadata": {
         "id": "vD8oxLRGDh0a"
       },
       "id": "vD8oxLRGDh0a",
-      "execution_count": 65,
+      "execution_count": 89,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "get_recommendations('The Dark Knight Rises')"
+        "def display_output(user_input):\n",
+        "  i = 1\n",
+        "  print(\"Some of the movies similar to \" + user_input + \" that you could like are: \" )\n",
+        "  for movie in get_recommendations(user_input):\n",
+        "    print(str(i)+\".\\t\"+ movie)\n",
+        "    i+=1"
       ],
       "metadata": {
-        "id": "kYilmv0dEAWT",
-        "outputId": "d48ccea9-29cd-4130-f2f3-68104ff67720",
+        "id": "T_xsZAvcNq1M"
+      },
+      "id": "T_xsZAvcNq1M",
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "user_input = input(\"Enter a movie you like: \")\n",
+        "display_output(user_input)"
+      ],
+      "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 301
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kYilmv0dEAWT",
+        "outputId": "8d49842c-3605-4faf-a185-d475fc8c2a0d"
       },
       "id": "kYilmv0dEAWT",
-      "execution_count": 66,
+      "execution_count": 86,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "65                              The Dark Knight\n",
-              "119                               Batman Begins\n",
-              "1196                               The Prestige\n",
-              "2917                                The Fighter\n",
-              "3854    Batman: The Dark Knight Returns, Part 2\n",
-              "2793                       The Killer Inside Me\n",
-              "299                              Batman Forever\n",
-              "813                                    Superman\n",
-              "870                                 Superman II\n",
-              "1033                                   Insomnia\n",
-              "Name: title, dtype: object"
-            ],
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>title</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>65</th>\n",
-              "      <td>The Dark Knight</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>119</th>\n",
-              "      <td>Batman Begins</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1196</th>\n",
-              "      <td>The Prestige</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2917</th>\n",
-              "      <td>The Fighter</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3854</th>\n",
-              "      <td>Batman: The Dark Knight Returns, Part 2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2793</th>\n",
-              "      <td>The Killer Inside Me</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>299</th>\n",
-              "      <td>Batman Forever</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>813</th>\n",
-              "      <td>Superman</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>870</th>\n",
-              "      <td>Superman II</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1033</th>\n",
-              "      <td>Insomnia</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div><br><label><b>dtype:</b> object</label>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 66
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a movie you like: Avatar\n",
+            "Some of the movies similar to Avatar that you could like are: \n",
+            "1.\tAliens\n",
+            "2.\tClash of the Titans\n",
+            "3.\tAlien\n",
+            "4.\tGuardians of the Galaxy\n",
+            "5.\tSnow White: A Tale of Terror\n",
+            "6.\tStar Trek Into Darkness\n",
+            "7.\tGalaxy Quest\n",
+            "8.\tTerminator Salvation\n",
+            "9.\tThe Terminator\n",
+            "10.\tPocahontas\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "user_input = input(\"Enter a movie you like: \")\n",
+        "display_output(user_input)"
+      ],
+      "metadata": {
+        "id": "EEP_21k2MgBA",
+        "outputId": "8ac9c2a2-afca-4bcd-fdcf-dd6840fdde82",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "EEP_21k2MgBA",
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a movie you like: God father\n",
+            "Some of the movies similar to God father that you could like are: \n",
+            "1.\tThe Godfather: Part III\n",
+            "2.\tThe Godfather: Part II\n",
+            "3.\tApocalypse Now\n",
+            "4.\tDracula\n",
+            "5.\tThis Thing of Ours\n",
+            "6.\tCloser\n",
+            "7.\tMickey Blue Eyes\n",
+            "8.\tThe Score\n",
+            "9.\tTwixt\n",
+            "10.\tSea of Love\n"
+          ]
         }
       ]
     }
