--- a/movie-recommendations/MovieRecommendationsML.ipynb
+++ b/movie-recommendations/MovieRecommendationsML.ipynb
@@ -3671,7 +3671,7 @@
     {
       "cell_type": "code",
       "source": [
-        "user_input = input(\"Enter a movie you like: \")\n",
+        "user_input = input(\"🎥 Enter a movie you like: \")\n",
         "display_output(user_input)"
       ],
       "metadata": {
@@ -3679,17 +3679,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EEP_21k2MgBA",
-        "outputId": "8ac9c2a2-afca-4bcd-fdcf-dd6840fdde82"
+        "outputId": "070887ff-e0b0-4541-9809-ac3999d114bf"
       },
       "id": "EEP_21k2MgBA",
-      "execution_count": 90,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a movie you like: God father\n",
-            "Some of the movies similar to God father that you could like are: \n",
+            "🎥 Enter a movie you like: God Fther\n",
+            "Some of the movies similar to God Fther that you could like are: \n",
             "1.\tThe Godfather: Part III\n",
             "2.\tThe Godfather: Part II\n",
             "3.\tApocalypse Now\n",
